# takesatoJapanese

./: .env  README.md  config.py  pyproject.toml  requirements.txt  run.py  vercel.json
app/: __init__.py  decorators.py  models.py
app/auth/: routes.py
app/meeting/: routes.py
app/record/: routes.py
app/staff/: routes.py
app/static/: manifest.json  service-worker.js
app/static/js/: address_lookup.js
app/student/: routes.py
app/templates/: _form_helpers.html  base.html  dashboard.html  layout.html
app/templates/auth/: login.html
app/templates/meeting/: detail.html  form.html  list.html
app/templates/record/: create.html  edit.html  list.html
app/templates/staff/: edit.html  list.html
app/templates/student/: _form.html  attendance_pdf_template.html  attendence.html  create.html  edit.html  list.html
instance/: dev_school.db
