[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venvbla
  | __pycache__
)/
'''

[project]
name = "takesato-japanese"
version = "0.1.0"
description = "My project description"
dependencies = [
    # List your dependencies here, e.g.,
    # "fastapi",
    # "uvicorn",
]

# If you are using uv, ensure this is present:
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"